data/derived/fa15/progs/unify/prog3590.ml.out
Characters 225-229:
  let (_, res) = List.fold_left f base args in
                                  ^^^^
Error: This expression has type 'a list
       but an expression was expected of type int * int list
